[package]
name = "mbei-central"
version = "0.1.0"
edition = "2021"

[dependencies]
mbei-core = {path = "../core"}
mbei-grpc = {path = "../grpc" }
bincode = "2.0.0-beta.1"
env_logger = "0.9.0"
log = "0.4.14"
structopt = { version = "0.3", default-features = false }
tokio = {version="1.15.0", features = ["rt-multi-thread"] }
rusqlite = "0.26.3"
backoff = { version = "0.4.0", features = ["tokio"] }
