[package]
name = "mbei-core"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

[dependencies]
seahash = "4.1.0"
bincode = "2.0.0-beta.1"
env_logger = "0.9.0"
log = "0.4.14"
rusqlite = "0.26.3"
strum = "0.23.0"
strum_macros = "0.23.1"
uuid = { version = "0.8", features = ["v4"] }
serde = { version = "1.0.132", features = ["derive"] }
serde_yaml = "0.8.23"