[package]
name = "mbei-grpc"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

[dependencies]
mbei-core = {path = "../core"}
env_logger = "0.9.0"
log = "0.4.14"
tonic = "0.6.2"
prost = "0.9.0"
backoff = { version = "0.4.0", features = ["tokio"] }
tokio = {version="1.15.0", features = ["rt-multi-thread"] }
futures-util = "0.3.19"

[build-dependencies]
tonic-build = "0.6.2"