[package]
name = "mbei-integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]
mbei-core = {path = "../core"}
mbei-scenario-server = {path = "../scenario-server" }
mbei-testdata = {path = "../testdata"}
mbei-central = {path = "../central"}
mbei-component = {path = "../component"}
rstest = "0.12.0"
serial_test = "0.5.1"
bincode = "2.0.0-beta.1"
env_logger = "0.9.0"
tokio = "1.15.0"
log = "0.4.14"
