[package]
name = "mbei-testdata"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

[dependencies]
mbei-core = {path = "../core"}
mbei-grpc = {path = "../grpc"}
mbei-scenario-server = {path = "../scenario-server"}
tonic = "0.6.2"
seahash = "4.1.0"
bincode = "2.0.0-beta.1"
env_logger = "0.9.0"
log = "0.4.14"
uuid = { version = "0.8", features = ["v4"] }
structopt = { version = "0.3", default-features = false }
serde = { version = "1.0.132", features = ["derive"] }
serde_yaml = "0.8.23"
tokio = {version="1.15.0", features = ["rt-multi-thread", "sync", "signal"] }
rand_chacha = "0.3.1"